crates/test-framework/src/snapshot/snapshots/explain/test_framework__snapshot__file[parquet]-duckdb[file]-on_zero_results_small_clickbench_q4_explain.snap
---
source: crates/test-framework/src/snapshot/mod.rs
description: "Query: clickbench_q4"
---
+---------------+-------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                |
+---------------+-------------------------------------------------------------------------------------+
| logical_plan  | Aggregate: groupBy=[[]], aggr=[[avg(CAST(hits.UserID AS Float64))]]                 |
|               |   TableScan: hits projection=[UserID]                                               |
| physical_plan | AggregateExec: mode=Final, gby=[], aggr=[avg(hits.UserID)]                          |
|               |   CoalescePartitionsExec                                                            |
|               |     AggregateExec: mode=Partial, gby=[], aggr=[avg(hits.UserID)]                    |
|               |       RepartitionExec: partitioning=RoundRobinBatch(16), input_partitions=1         |
|               |         SchemaCastScanExec                                                          |
|               |           FallbackOnZeroResultsScanExec                                             |
|               |             CoalescePartitionsExec                                                  |
|               |               RepartitionExec: partitioning=RoundRobinBatch(16), input_partitions=1 |
|               |                 CooperativeExec                                                     |
|               |                   BytesProcessedExec                                                |
|               |                     DuckSqlExec sql= SELECT "UserID" FROM "hits"                    |
|               |                                                                                     |
+---------------+-------------------------------------------------------------------------------------+
