crates/test-framework/src/snapshot/snapshots/explain/test_framework__snapshot__file[parquet]-duckdb[file]-on_zero_results_small_clickbench_q5_explain.snap
---
source: crates/test-framework/src/snapshot/mod.rs
description: "Query: clickbench_q5"
---
+---------------+---------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                        |
+---------------+---------------------------------------------------------------------------------------------+
| logical_plan  | Projection: count(alias1) AS count(DISTINCT hits.UserID)                                    |
|               |   Aggregate: groupBy=[[]], aggr=[[count(alias1)]]                                           |
|               |     Aggregate: groupBy=[[hits.UserID AS alias1]], aggr=[[]]                                 |
|               |       TableScan: hits projection=[UserID]                                                   |
| physical_plan | ProjectionExec: expr=[count(alias1)@0 as count(DISTINCT hits.UserID)]                       |
|               |   AggregateExec: mode=Final, gby=[], aggr=[count(alias1)]                                   |
|               |     CoalescePartitionsExec                                                                  |
|               |       AggregateExec: mode=Partial, gby=[], aggr=[count(alias1)]                             |
|               |         AggregateExec: mode=FinalPartitioned, gby=[alias1@0 as alias1], aggr=[]             |
|               |           RepartitionExec: partitioning=Hash([alias1@0], 16), input_partitions=16           |
|               |             AggregateExec: mode=Partial, gby=[UserID@0 as alias1], aggr=[]                  |
|               |               RepartitionExec: partitioning=RoundRobinBatch(16), input_partitions=1         |
|               |                 SchemaCastScanExec                                                          |
|               |                   FallbackOnZeroResultsScanExec                                             |
|               |                     CoalescePartitionsExec                                                  |
|               |                       RepartitionExec: partitioning=RoundRobinBatch(16), input_partitions=1 |
|               |                         CooperativeExec                                                     |
|               |                           BytesProcessedExec                                                |
|               |                             DuckSqlExec sql= SELECT "UserID" FROM hits                      |
|               |                                                                                             |
+---------------+---------------------------------------------------------------------------------------------+
