crates/test-framework/src/snapshot/snapshots/explain/test_framework__snapshot__file[parquet]-duckdb[file]-on_zero_results_small_clickbench_q7_explain.snap
---
source: crates/test-framework/src/snapshot/mod.rs
description: "Query: clickbench_q7"
---
+---------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                       |
+---------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Aggregate: groupBy=[[]], aggr=[[min(__common_expr_1 AS to_timestamp(hits.EventDate * Int64(86400))), max(__common_expr_1 AS to_timestamp(hits.EventDate * Int64(86400)))]] |
|               |   Projection: to_timestamp(CAST(hits.EventDate AS Int64) * Int64(86400)) AS __common_expr_1                                                                                |
|               |     BytesProcessedNode                                                                                                                                                     |
|               |       TableScan: hits projection=[EventDate]                                                                                                                               |
| physical_plan | AggregateExec: mode=Final, gby=[], aggr=[min(to_timestamp(hits.EventDate * Int64(86400))), max(to_timestamp(hits.EventDate * Int64(86400)))]                               |
|               |   CoalescePartitionsExec                                                                                                                                                   |
|               |     AggregateExec: mode=Partial, gby=[], aggr=[min(to_timestamp(hits.EventDate * Int64(86400))), max(to_timestamp(hits.EventDate * Int64(86400)))]                         |
|               |       ProjectionExec: expr=[to_timestamp(CAST(EventDate@0 AS Int64) * 86400) as __common_expr_1]                                                                           |
|               |         RepartitionExec: partitioning=RoundRobinBatch(16), input_partitions=1                                                                                              |
|               |           BytesProcessedExec                                                                                                                                               |
|               |             SchemaCastScanExec                                                                                                                                             |
|               |               FallbackOnZeroResultsScanExec                                                                                                                                |
|               |                 CoalescePartitionsExec                                                                                                                                     |
|               |                   RepartitionExec: partitioning=RoundRobinBatch(16), input_partitions=1                                                                                    |
|               |                     CooperativeExec                                                                                                                                        |
|               |                       DuckSqlExec sql= SELECT "EventDate" FROM hits                                                                                                        |
|               |                                                                                                                                                                            |
+---------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
