crates/test-framework/src/snapshot/snapshots/explain/test_framework__snapshot__file[parquet]-duckdb[file]-on_zero_results_small_clickbench_q8_explain.snap
---
source: crates/test-framework/src/snapshot/mod.rs
description: "Query: clickbench_q8"
---
+---------------+--------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                           |
+---------------+--------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Projection: hits.AdvEngineID, count(*)                                                                                         |
|               |   Sort: count(Int64(1)) AS count(*) AS count(*) DESC NULLS FIRST                                                               |
|               |     Projection: hits.AdvEngineID, count(Int64(1)) AS count(*), count(Int64(1))                                                 |
|               |       Aggregate: groupBy=[[hits.AdvEngineID]], aggr=[[count(Int64(1))]]                                                        |
|               |         BytesProcessedNode                                                                                                     |
|               |           Filter: hits.AdvEngineID != Int16(0)                                                                                 |
|               |             TableScan: hits projection=[AdvEngineID], partial_filters=[hits.AdvEngineID != Int16(0)]                           |
| physical_plan | ProjectionExec: expr=[AdvEngineID@0 as AdvEngineID, count(*)@1 as count(*)]                                                    |
|               |   SortExec: expr=[count(Int64(1))@2 DESC], preserve_partitioning=[false]                                                       |
|               |     CoalescePartitionsExec                                                                                                     |
|               |       ProjectionExec: expr=[AdvEngineID@0 as AdvEngineID, count(Int64(1))@1 as count(*), count(Int64(1))@1 as count(Int64(1))] |
|               |         AggregateExec: mode=FinalPartitioned, gby=[AdvEngineID@0 as AdvEngineID], aggr=[count(Int64(1))]                       |
|               |           CoalesceBatchesExec: target_batch_size=8192                                                                          |
|               |             RepartitionExec: partitioning=Hash([AdvEngineID@0], 16), input_partitions=16                                       |
|               |               AggregateExec: mode=Partial, gby=[AdvEngineID@0 as AdvEngineID], aggr=[count(Int64(1))]                          |
|               |                 BytesProcessedExec                                                                                             |
|               |                   CoalesceBatchesExec: target_batch_size=8192                                                                  |
|               |                     FilterExec: AdvEngineID@0 != 0                                                                             |
|               |                       SchemaCastScanExec                                                                                       |
|               |                         RepartitionExec: partitioning=RoundRobinBatch(16), input_partitions=1                                  |
|               |                           FallbackOnZeroResultsScanExec                                                                        |
|               |                             CoalescePartitionsExec                                                                             |
|               |                               RepartitionExec: partitioning=RoundRobinBatch(16), input_partitions=1                            |
|               |                                 DuckSqlExec sql= SELECT "AdvEngineID" FROM hits WHERE (AdvEngineID <> 0)                       |
|               |                                                                                                                                |
+---------------+--------------------------------------------------------------------------------------------------------------------------------+
