crates/test-framework/src/snapshot/snapshots/explain/test_framework__snapshot__file[parquet]-duckdb[file]-on_zero_results_small_clickbench_q9_explain.snap
---
source: crates/test-framework/src/snapshot/mod.rs
description: "Query: clickbench_q9"
---
+---------------+-------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                        |
+---------------+-------------------------------------------------------------------------------------------------------------+
| logical_plan  | Sort: u DESC NULLS FIRST, fetch=10                                                                          |
|               |   Projection: hits.RegionID, count(alias1) AS u                                                             |
|               |     Aggregate: groupBy=[[hits.RegionID]], aggr=[[count(alias1)]]                                            |
|               |       Aggregate: groupBy=[[hits.RegionID, hits.UserID AS alias1]], aggr=[[]]                                |
|               |         TableScan: hits projection=[RegionID, UserID]                                                       |
| physical_plan | SortExec: TopK(fetch=10), expr=[u@1 DESC], preserve_partitioning=[false]                                    |
|               |   CoalescePartitionsExec                                                                                    |
|               |     ProjectionExec: expr=[RegionID@0 as RegionID, count(alias1)@1 as u]                                     |
|               |       AggregateExec: mode=FinalPartitioned, gby=[RegionID@0 as RegionID], aggr=[count(alias1)]              |
|               |         RepartitionExec: partitioning=Hash([RegionID@0], 32), input_partitions=32                           |
|               |           AggregateExec: mode=Partial, gby=[RegionID@0 as RegionID], aggr=[count(alias1)]                   |
|               |             AggregateExec: mode=FinalPartitioned, gby=[RegionID@0 as RegionID, alias1@1 as alias1], aggr=[] |
|               |               RepartitionExec: partitioning=Hash([RegionID@0, alias1@1], 32), input_partitions=32           |
|               |                 AggregateExec: mode=Partial, gby=[RegionID@0 as RegionID, UserID@1 as alias1], aggr=[]      |
|               |                   RepartitionExec: partitioning=RoundRobinBatch(32), input_partitions=1                     |
|               |                     SchemaCastScanExec                                                                      |
|               |                       FallbackOnZeroResultsScanExec                                                         |
|               |                         CoalescePartitionsExec                                                              |
|               |                           RepartitionExec: partitioning=RoundRobinBatch(32), input_partitions=1             |
|               |                             BytesProcessedExec                                                              |
|               |                               DuckSqlExec sql= SELECT "RegionID", "UserID" FROM "hits"                      |
|               |                                                                                                             |
+---------------+-------------------------------------------------------------------------------------------------------------+
